2024-09-25T00:48:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11024249071 # 429
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-25
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 414 804 / 418 808
* notice: next accum: outdated-unq outdated-all / unq all: 415 805 / 418 808
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-10] / []

2024-09-19T00:45:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932387766 # 423
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-19
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 414 804 / 416 806
* notice: next accum: outdated-unq outdated-all / unq all: 414 804 / 418 808
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-09-18]

2024-09-17T00:37:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10894359829 # 421
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-17
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 413 803 / 416 806
* notice: next accum: outdated-unq outdated-all / unq all: 414 804 / 416 806
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-02] / []

2024-09-16T00:49:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875757700 # 420