@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-25T00:48:31Z",
-  "count_outdated" : 805,
-  "uniques_outdated" : 415,
-  "count" : 808,
-  "uniques" : 418,
+  "timestamp" : "2024-09-29T00:52:51Z",
+  "count_outdated" : 806,
+  "uniques_outdated" : 416,
+  "count" : 809,
+  "uniques" : 419,
   "clones" : [
-    {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-18T00:00:00Z",
       "count": 2,
@@ -22,6 +13,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
