@@ -3,14 +3,14 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-09-18T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
