@@ -1,3 +1,12 @@
+2024-09-29T00:52:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11088330550 # 433
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 415 805 / 418 808
+* notice: next accum: outdated-unq outdated-all / unq all: 416 806 / 419 809
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-09-14] / [2024-09-28]
+
 2024-09-25T00:48:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11024249071 # 429
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-25
